# dymo-cli

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
src/: cli.rs  error.rs  fetch.rs  main.rs
src/ble/: mod.rs  protocol.rs
src/fonts/: mod.rs
src/render/: dither.rs  encode.rs  mod.rs  text.rs
src/web/: index.html  mod.rs
